# OpenCVClient

./: CMakeLists.txt  README.md  build.sh  tld.txt
IntelEdison/: CMakeLists.txt
IntelEdison/src/main/c++/headers/: IntelEdison.hpp
IntelEdison/src/main/c++/native/: IntelEdison.cpp
OpenCVNetwork/: CMakeLists.txt
OpenCVNetwork/src/main/c++/headers/network/: ServerAddr.hpp
OpenCVNetwork/src/main/c++/headers/network/exceptions/: IOException.hpp  RuntimeException.hpp
OpenCVNetwork/src/main/c++/headers/network/properties/: PropertiesClient.hpp  TCPPacketClient.hpp  TCPSocketClient.hpp
OpenCVNetwork/src/main/c++/headers/network/stream/: ImagePacket.hpp  StreamClient.hpp  UDPPacketClient.hpp  UDPSocketClient.hpp
OpenCVNetwork/src/main/c++/native/network/: ServerAddr.cpp
OpenCVNetwork/src/main/c++/native/network/exceptions/: IOException.cpp  RuntimeException.cpp
Properties/: CMakeLists.txt
Properties/src/main/c++/headers/: DataStream.hpp  Properties.hpp  PropertiesListener.hpp  Serializable.hpp
Properties/src/main/c++/headers/structures/: DoubleProperty.hpp  IntProperty.hpp  Property.hpp  SelectProperty.hpp
Properties/src/main/c++/native/: Properties.cpp
Properties/src/main/c++/native/structures/: DoubleProperty.cpp  IntProperty.cpp  SelectProperty.cpp
src/main/c++/headers/: AppState.hpp  Loop.hpp  Profiler.hpp  SimpleConfig.hpp
src/main/c++/headers/frame/processor/: FrameProcessor.hpp  Loop.hpp  ObjectDetect.hpp
src/main/c++/headers/frame/source/: FrameSource.hpp  ImageSrc.hpp  RaspiCamSrc.hpp  WebCamSrc.hpp
src/main/c++/headers/ilin_pavel/: IPTriangleDetect.hpp  IPTriangleDetect2.hpp
src/main/c++/headers/network/: ServerAddr.hpp
src/main/c++/headers/network/exceptions/: IOException.hpp  RuntimeException.hpp
src/main/c++/headers/network/properties/: PropertiesClient.hpp  TCPClient.hpp  TCPPacketClient.hpp
src/main/c++/headers/network/stream/: ImagePacket.hpp  StreamClient.hpp
src/main/c++/headers/opencv/: DrawUtils.hpp  FaceDetect.hpp  Loop.hpp  ObjectDetect.hpp  OpenCVWrap.hpp  Tool.hpp  Types.hpp  Utils.hpp
src/main/c++/headers/platov_aleksey/: PATriangleDetect.hpp  TriangleDetect.hpp
src/main/c++/headers/tld/: DetectionGraph.hpp  LearningTargets.hpp  TLDWrap.hpp
src/main/c++/headers/triangle_detect/ilin_pavel/: IPTDContours.hpp  IPTDHough.hpp  IPTDManual.hpp
src/main/c++/headers/utils/: CmdParser.hpp  CvUtils.hpp  DiaUtils.hpp  DrawUtils.hpp  FrameProcessor.hpp  MacroEnumString.hpp  PropertiesLogger.hpp  SelectDialog.hpp  VideoSource.hpp
src/main/c++/native/: AppState.cpp  ClientApp.cpp  Loop.cpp  Profiler.cpp  SimpleConfig.cpp
src/main/c++/native/frame/processor/: Loop.cpp  ObjectDetect.cpp
src/main/c++/native/frame/source/: ImageSrc.cpp  RaspiCamSrc.cpp  WebCamSrc.cpp
src/main/c++/native/ilin_pavel/: IPTriangleDetect.cpp  IPTriangleDetect2.cpp
src/main/c++/native/network/: ServerAddr.cpp
src/main/c++/native/network/exceptions/: IOException.cpp
src/main/c++/native/network/properties/: PropertiesClient.cpp  TCPClient.cpp  TCPPacketClient.cpp  TCPSocketClient.cpp
src/main/c++/native/network/stream/: ImagePacket.cpp  StreamClient.cpp
src/main/c++/native/opencv/: DrawUtils.cpp  FaceDetect.cpp  Loop.cpp  ObjectDetect.cpp  OpenCVTool.hpp  OpenCVWrap.cpp  Types.cpp  Utils.cpp
src/main/c++/native/platov_aleksey/: PATriangleDetect.cpp  TriangleDetect.cpp
src/main/c++/native/tld/: DetectionGraph.cpp  LearningTargets.cpp  TLDWrap.cpp
src/main/c++/native/triangle_detect/ilin_pavel/: IPTDContours.cpp  IPTDHough.cpp  IPTDManual.cpp
src/main/c++/native/triangle_detect/platov_aleksey/: PATriangleDetect.cpp
src/main/c++/native/utils/: CvUtils.cpp  DiaUtils.cpp  DrawUtils.cpp  FrameProcessor.cpp  Profiler.cpp  PropertiesLogger.cpp  SelectDialog.cpp  VideoSource.cpp
(+58 files in other folders)
